# dcc012-arquivos

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  main.cpp
include/: estudante.h  estudante_io.h
output/: output.txt
src/: estudante.c  estudante.cpp  estudante_io.cpp
